# Homework

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: my-basic.yml
01-1/: CMakeLists.txt  Configure.h  Configure.h.in  hello.cxx
01-2/: CMakeLists.txt  hello.cxx
01-2/hello_bin/: CMakeLists.txt
01-2/hello_bin/src/: main.cpp
01-2/hello_lib/: CMakeLists.txt
01-2/hello_lib/include/: greeting.hpp
01-2/hello_lib/src/: greeting.cpp
02-1-SDL-static/: CMakeLists.txt
02-1-SDL-static/include/: SDL_config.h
02-1-SDL-static/src/: main.cxx
02-2-SDL-dynamic/: CMakeLists.txt  Configure.h.in
02-2-SDL-dynamic/src/: main.cxx
03-1-show-events/: CMakeLists.txt  show_events.cxx
03-2-SDL-Engine/: CMakeLists.txt  my_engine.cxx
03-3-SDL-dynamic-engine/: CMakeLists.txt  my_engine.cxx
03-3-SDL-static-engine/: CMakeLists.txt  game.cxx  my_engine.hxx
03-4-SDL-hot-reload-eng/: CMakeLists.txt  game.cxx  my_engine.cxx  my_engine.hxx
04-render/basic-canvas/: CMakeLists.txt  canvas_basic.cxx  canvas_basic.hxx  canvas_basic_main.cxx
04-render/draw_shader_sdl/: CMakeLists.txt
04-render/draw_shader_sdl/include/: canvas_basic.hxx  my_gfx_program.hxx  triangle_indexed_render.hxx
04-render/draw_shader_sdl/src/: canvas_basic.cxx  main.cxx  my_gfx_program.cxx  triangle_interpolated_render.cxx
04-render/line_render/: CMakeLists.txt  canvas_basic.hxx  line_render.cxx  line_render_main.cxx
04-render/my_shader/: CMakeLists.txt
04-render/my_shader/include/: canvas_basic.hxx  line_render.hxx  matrix.hxx  my_gfx_program.hxx  triangle_basic_render.hxx  triangle_interpolated_render.hxx  vector.hxx
04-render/my_shader/src/: canvas_basic.cxx  line_render.cxx  main.cpp  main.cxx  matrix.cpp  my_gfx_program.cxx  triangle_interpolated_render.cxx  vector.cpp
04-render/triangle_basic_render/: CMakeLists.txt  canvas_basic.cxx  triangle_basic_render.cxx  triangle_main.cxx
04-render/triangle_indexed_render/: CMakeLists.txt  canvas_basic.cxx  line_render.cxx  line_render.hxx  triangle_main.cxx
04-render/triangle_interpolated/: CMakeLists.txt
04-render/triangle_interpolated/include/: my_gfx_program.hxx  triangle_interpolated_render.hxx
04-render/triangle_interpolated/src/: my_gfx_program.cxx  triangle_indexed_render.cxx  triangle_interpolated_render.cxx  triangle_main.cxx
05-opengl/opengl_min/include/: my_engine.hxx
05-opengl/opengl_min/include/glad/: glad.h
05-opengl/opengl_min/src/: game.cxx  glad.c  my_engine.cxx
05-opengl/opengl_triangles/: CMakeLists.txt
05-opengl/opengl_triangles/include/: my_engine.hxx
05-opengl/opengl_triangles/src/: game.cxx  my_engine.cxx
05-opengl/renderdoc_check/: CMakeLists.txt
05-opengl/renderdoc_check/include/: my_engine.hxx
05-opengl/renderdoc_check/src/: game.cxx  my_engine.cxx
06-vertex-morphing/: CMakeLists.txt
06-vertex-morphing/include/: gl_check.hxx  my_engine.hxx
06-vertex-morphing/src/: game.cxx  my_engine.cxx
07-texture-loading/: CMakeLists.txt
07-texture-loading/include/: my_engine.hxx
07-texture-loading/shader_source/: frag1.txt  vert1.txt
07-texture-loading/src/: game.cxx  gfx_program.cxx  my_engine.cxx
08-math-on-proc/: CMakeLists.txt
08-math-on-proc/include/: my_engine.hxx  picopng.hxx
08-math-on-proc/shader_source/: frag_text.txt  vert_text.txt
08-math-on-proc/src/: game.cxx  my_engine.cxx
09-math-on-gpu/: CMakeLists.txt
09-math-on-gpu/include/: .clang-format  gfx_program.hxx  my_engine.hxx
09-math-on-gpu/shader_source/: frag1.txt  vert_text.txt
09-math-on-gpu/src/: game.cxx  my_engine.cxx
arcanoid/: CMakeLists.txt
arcanoid/include/: game.hxx  game_components.hxx  gfx_program.hxx  my_engine.hxx  my_math.hxx  texture.hxx
arcanoid/shader_source/: frag1.txt  vert1.txt
arcanoid/src/: .clang-format  game.cxx  game_components.cxx  gfx_program.cxx  gl_check.cxx  main.cxx  my_engine.cxx  my_math.cxx  texture.cxx
opengl_min/: CMakeLists.txt
